--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>containerTool</td>
 <td>string</td>
 <td>any</td>
-<td>A name of the package manager, container or infrastructure as a code tool</td>
+<td>A name of the package manager, container or infrastructure as code tool</td>
 </tr>
 <tr>
 <td>format</td>
