--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
   <span class="dl">"</span><span class="s2">description</span><span class="dl">"</span><span class="p">:</span> <span class="dl">""</span><span class="p">,</span>
   <span class="dl">"</span><span class="s2">visibility</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">private</span><span class="dl">"</span><span class="p">,</span>
   <span class="dl">"</span><span class="s2">status</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">draft</span><span class="dl">"</span><span class="p">,</span>
-  <span class="dl">"</span><span class="s2">version</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">0.1</span><span class="dl">"</span><span class="p">,</span>
+  <span class="dl">"</span><span class="s2">versions</span><span class="dl">"</span><span class="p">:</span> <span class="p">[</span><span class="dl">"</span><span class="s2">0.1</span><span class="dl">"</span><span class="p">],</span>
   <span class="dl">"</span><span class="s2">categories</span><span class="dl">"</span><span class="p">:</span> <span class="p">[</span><span class="dl">"</span><span class="s2">pets</span><span class="dl">"</span><span class="p">],</span>
   <span class="dl">"</span><span class="s2">tags</span><span class="dl">"</span><span class="p">:</span> <span class="p">[</span><span class="dl">"</span><span class="s2">pet</span><span class="dl">"</span><span class="p">],</span>
   <span class="dl">"</span><span class="s2">brandSlogan</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">Passion for the data monetization</span><span class="dl">"</span><span class="p">,</span>
@@ -599,10 +599,10 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>comma separates array of tags</td>
 </tr>
 <tr>
-<td>version</td>
-<td>string</td>
+<td>versions</td>
+<td>array</td>
 <td>The versioning scheme is <strong>major.minor.</strong>. Examples: 1.0, 2.1, 3.15</td>
-<td>The version of the product.</td>
+<td>The version or versions of the product.</td>
 </tr>
 <tr>
 <td>logoURL</td>
