--- a/index.html
+++ b/index.html
@@ -590,13 +590,13 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>categories</td>
 <td>array</td>
 <td>-</td>
-<td>comma separates array of categories</td>
+<td>Comma separates array of categories.</td>
 </tr>
 <tr>
 <td>tags</td>
 <td>array</td>
 <td>-</td>
-<td>comma separates array of tags</td>
+<td>Comma separates array of tags.</td>
 </tr>
 <tr>
 <td>version</td>
@@ -614,7 +614,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>brandSlogan</td>
 <td>string</td>
 <td>-</td>
-<td>Brand related slogan like Nike has <em>just do it</em></td>
+<td>Brand related slogan like Nike has <em>just do it</em>.</td>
 </tr>
 </tbody></table>
 
