deploy: 7b8858e7e14dbc494ba7f1a0cf521d1c7f203385

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td><strong>name</strong></td>
 <td>string</td>
 <td>max length 256 chars</td>
-<td><strong>REQUIRED</strong>The name of the product.</td>
+<td><strong>REQUIRED</strong> The name of the product.</td>
 </tr>
 <tr>
 <td><strong>productID</strong></td>
@@ -532,7 +532,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td><strong>visibility</strong></td>
 <td>one of</td>
 <td>one of: private, organisation, public</td>
-<td><strong>REQUIRED</strong> The publicity level eg who can see this product. Private - just the creator. Organisation - visible to all in your organisation. Public - visible to all publicly</td>
+<td><strong>REQUIRED</strong> The publicity level eg who can see this product. Private - just the creator. Organisation - visible to all in your organisation. Public - visible to all publicly.</td>
 </tr>
 <tr>
 <td><strong>status</strong></td>
@@ -543,8 +543,8 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <tr>
 <td><strong>type</strong></td>
 <td>one of</td>
-<td>Options: raw data, derived data, dataset, reports, analytic view, 3D visualisation, algorithm, decision support, automated decision-making, data-enhanced product, data-driven service, data-enabled performance, bi-directional</td>
-<td><strong>REQUIRED</strong> The type of the product. Options are derived from examples and lists found from academic literature</td>
+<td>Options: raw data, derived data, dataset, reports, analytic view, 3D visualisation, algorithm, decision support, automated decision-making, data-enhanced product, data-driven service, data-enabled performance, bi-directional.</td>
+<td><strong>REQUIRED</strong> The type of the product. Options are derived from examples and lists found from academic literature.</td>
 </tr>
 </tbody></table>
 <h2 id='optional-attributes'>Optional attributes</h2>
