deploy: 69cec8b5b618b7244c405019989e98451eab60f1

--- a/index.html
+++ b/index.html
@@ -1006,25 +1006,25 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <tr>
 <td>updateFrequency</td>
 <td>element</td>
-<td>options for <em>unit</em> are: milliseconds, seconds, minutes, days, weeks, months, years, never, null. <br/><br/> <em>Value</em> attribute is Integer.</td>
-<td>name of the quality attribute indicating the timely interval how often data is updated.</td>
+<td>Options for <em>unit</em> are: milliseconds, seconds, minutes, days, weeks, months, years, never, null. <br/><br/> <em>Value</em> attribute is Integer.</td>
+<td>Name of the quality attribute indicating the timely interval how often data is updated.</td>
 </tr>
 <tr>
 <td>uptime</td>
 <td>element</td>
-<td>options for <em>unit</em> are: percentage, string, null. <br/><br/> The <em>value</em> attribute can be integer or string &quot;best effort&quot;.</td>
+<td>Options for <em>unit</em> are: percentage, string, null. <br/><br/> The <em>value</em> attribute can be integer or string &quot;best effort&quot;.</td>
 <td>Uptime is the amount of time that a service is online available and operational. Guaranteed uptime is expressed as SLA level and is generally the most important metric to measure the quality of a hosting provider. An SLA level of 99.99% for example equates to 52 minutes and 36 seconds of downtime per year. in this context uptime is SLA.</td>
 </tr>
 <tr>
 <td>responseTime</td>
 <td>element</td>
-<td><em>unit</em> options are: milliseconds, seconds, null. <br/><br/><em>Value</em> can be integer or null</td>
+<td><em>Unit</em> options are: milliseconds, seconds, null. <br/><br/><em>Value</em> can be integer or null</td>
 <td>Response time is the total amount of time it takes to respond to a request for service.</td>
 </tr>
 <tr>
 <td>nullValues</td>
 <td>element</td>
-<td><em>unit</em> is percentage. <br/><br/><em>Value</em> can be integer or null</td>
+<td><em>Unit</em> is percentage. <br/><br/><em>Value</em> can be integer or null</td>
 <td>Null values is the percentage of null values in the content. This is quite oftenly used as data quality attribute by data scientists.</td>
 </tr>
 <tr>
@@ -1043,7 +1043,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>phoneServiceHours</td>
 <td>string</td>
 <td>-</td>
-<td>Describes the service hours company provides. Contains information often in week level eg Mon-Fri at 8am - 4pm</td>
+<td>Describes the service hours company provides. Contains information often in week level eg Mon-Fri at 8am - 4pm.</td>
 </tr>
 <tr>
 <td>chatURL</td>
@@ -1055,7 +1055,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>chatServiceHours</td>
 <td>string</td>
 <td>-</td>
-<td>Describes the chat service hours company provides. Contains information often in week level eg Mon-Fri at 8am - 4pm</td>
+<td>Describes the chat service hours company provides. Contains information often in week level eg Mon-Fri at 8am - 4pm.</td>
 </tr>
 <tr>
 <td>chatResponseTime</td>
@@ -1067,13 +1067,13 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>email</td>
 <td>string</td>
 <td>-</td>
-<td>Email information for support requests</td>
+<td>Email information for support requests.</td>
 </tr>
 <tr>
 <td>emailServiceHours</td>
 <td>string</td>
 <td>-</td>
-<td>Describes the email service hours company provides. Contains information often in week level eg Mon-Fri at 8am - 4pm</td>
+<td>Describes the email service hours company provides. Contains information often in week level eg Mon-Fri at 8am - 4pm.</td>
 </tr>
 <tr>
 <td>emailResponseTime</td>
@@ -1097,31 +1097,31 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>community</td>
 <td>Element</td>
 <td>-</td>
-<td>Element that contains community based support function information</td>
+<td>Element that contains community based support function information.</td>
 </tr>
 <tr>
 <td>stackoverflowURL</td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>URL to the Stack Overflow. Could be for example list of resolved issues related to the product</td>
+<td>URL to the Stack Overflow. Could be for example list of resolved issues related to the product.</td>
 </tr>
 <tr>
 <td>forumURL</td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>URL to the community forum in which product related support requests can be raised</td>
+<td>URL to the community forum in which product related support requests can be raised.</td>
 </tr>
 <tr>
 <td>slackURL</td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>URL to the Slack workspace in which product related support requests can be raised</td>
+<td>URL to the Slack workspace in which product related support requests can be raised.</td>
 </tr>
 <tr>
 <td>twitterURL</td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>URL to the Twitter account for which product related support requests can be raised</td>
+<td>URL to the Twitter account for which product related support requests can be raised.</td>
 </tr>
 <tr>
 <td>observability</td>
@@ -1139,13 +1139,13 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>dashboardURL</td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>URL to dashboard application which visualizes product behaviour. This service should support at least part of the given product quality indicators</td>
+<td>URL to dashboard application which visualizes product behaviour. This service should support at least part of the given product quality indicators.</td>
 </tr>
 <tr>
 <td>uptimeURL</td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>URL to service which shows uptime statistics as well as other statistical information. This service should support at least part of the given product quality indicators</td>
+<td>URL to service which shows uptime statistics as well as other statistical information. This service should support at least part of the given product quality indicators.</td>
 </tr>
 </tbody></table>
 
