--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td><strong>price</strong></td>
 <td>string</td>
 <td>-</td>
-<td><strong>REQUIRED</strong> The offer price of a product, or of a price component, or revenue-sharing percentage. <br/><br/> If the <em>unit</em> of pricing is revenue-sharing, then this <em>price</em> attribute value is percentage value. <br/><br/> Use &#39;.&#39; (Unicode &#39;FULL STOP&#39; (U+002E)) rather than &#39;,&#39; to indicate a decimal point. Avoid using these symbols as a readability separator. Use values from 0123456789 (Unicode &#39;DIGIT ZERO&#39; (U+0030) to &#39;DIGIT NINE&#39; (U+0039)) rather than superficially similiar Unicode symbols. <br/><br/>With <em>data-volume</em> the price is for each 1GB of data</td>
+<td><strong>REQUIRED</strong> The offer price of a product, or of a price component, or revenue-sharing percentage. <br/><br/> If the <em>unit</em> of pricing is revenue-sharing, then this <em>price</em> attribute value is percentage value. <br/><br/> Use &#39;.&#39; (Unicode &#39;FULL STOP&#39; (U+002E)) rather than &#39;,&#39; to indicate a decimal point. Avoid using these symbols as a readability separator. Use values from 0123456789 (Unicode &#39;DIGIT ZERO&#39; (U+0030) to &#39;DIGIT NINE&#39; (U+0039)) rather than superficially similiar Unicode symbols. <br/><br/>With <em>data-volume</em> the price is for each 1GB of data.</td>
 </tr>
 <tr>
 <td><strong>billingDuration</strong></td>
@@ -720,7 +720,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td><strong>maxTransactionQuantity</strong></td>
 <td>Integer</td>
 <td>Integer</td>
-<td><strong>REQUIRED</strong> The maximum transaction quantity for the given billing duration. Use this to define for example monthly (or any other period) request limit to the data product. Note! If you want to set unlimited use, value must be 0 (zero)</td>
+<td><strong>REQUIRED</strong> The maximum transaction quantity for the given billing duration. Use this to define for example monthly (or any other period) request limit to the data product. Note! If you want to set unlimited use, value must be 0 (zero).</td>
 </tr>
 <tr>
 <td></td>
