--- a/index.html
+++ b/index.html
@@ -854,24 +854,24 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>dataPipeline</td>
 <td>element</td>
 <td>-</td>
-<td>Data Pipeline is a process whereby a data product pipeline deployment method is defined</td>
+<td>Data Pipeline is a process whereby a data product pipeline deployment method is defined.</td>
 </tr>
 <tr>
 <td>containerTool</td>
 <td>string</td>
 <td>any</td>
-<td>A name of the package manager, container or infrastructure as code tool</td>
+<td>A name of the package manager, container or infrastructure as code tool.</td>
 </tr>
 <tr>
 <td>format</td>
 <td>string</td>
 <td>any</td>
-<td>Type of script language</td>
+<td>Type of script language.</td>
 </tr>
 <tr>
 <td>status</td>
 <td>string</td>
-<td>Options: announcement, draft, development, testing, acceptance, production, sunset, retired</td>
+<td>Options: announcement, draft, development, testing, acceptance, production, sunset, retired.</td>
 <td></td>
 </tr>
 <tr>
@@ -884,55 +884,55 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>deploymentDocumentationURL</td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>The URL of the deployment documentation</td>
+<td>The URL of the deployment documentation.</td>
 </tr>
 <tr>
 <td>hashType</td>
 <td>string</td>
 <td>One of: SHA-1, SHA-2, SHA-3</td>
-<td>Type of secure hash algorithm for checksum</td>
+<td>Type of secure hash algorithm for checksum.</td>
 </tr>
 <tr>
 <td>checksum</td>
 <td>string</td>
 <td>any</td>
-<td>Script checksum</td>
+<td>Script checksum.</td>
 </tr>
 <tr>
 <td>DataAccess</td>
 <td>element</td>
 <td>-</td>
-<td>Reference to the ability to use data</td>
+<td>Reference to the ability to use data.</td>
 </tr>
 <tr>
 <td>type</td>
 <td>string</td>
 <td>One of: API, SQL, sFTP, gRPC</td>
-<td>Type of data access</td>
+<td>Type of data access.</td>
 </tr>
 <tr>
 <td>specification</td>
 <td>string</td>
 <td>any</td>
-<td>Type of the data access specification</td>
+<td>Type of the data access specification.</td>
 </tr>
 <tr>
 <td>format</td>
 <td>string</td>
 <td>any</td>
-<td>File format</td>
+<td>File format.</td>
 </tr>
 <tr>
 <td>specsURL</td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>The URL of the specification</td>
+<td>The URL of the specification.</td>
 </tr>
 <tr>
 <td>dataAccessDocumentationURL</td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>The URL of the data access documentation</td>
+<td>The URL of the data access documentation.</td>
 </tr>
 </tbody></table>
 <h1 id='data-sla'>Data SLA</h1>
