--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
          <span class="dl">"</span><span class="s2">definition</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">The purpose of this license is to determine the terms and conditions applicable to the licensing of the data product, whereby Data Holder grants Data User the right to use the data.</span><span class="dl">"</span><span class="p">,</span>
          <span class="dl">"</span><span class="s2">language</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">en-us</span><span class="dl">"</span><span class="p">,</span>
          <span class="dl">"</span><span class="s2">permanent</span><span class="dl">"</span><span class="p">:</span> <span class="kc">false</span><span class="p">,</span>
-         <span class="dl">"</span><span class="s2">terminationContitions</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">Cancellation before 30 days.</span><span class="dl">"</span><span class="p">,</span>
+         <span class="dl">"</span><span class="s2">terminationContitions</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">Cancellation before 30 days. After the expiry of the right of use, the product and its derivatives must be removed.</span><span class="dl">"</span><span class="p">,</span>
          <span class="dl">"</span><span class="s2">continuityConditions</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">Expired license will automatically continued without written cancellation (termination) by Data Holder</span><span class="dl">"</span><span class="p">,</span>
          <span class="dl">"</span><span class="s2">restrictions</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">Data User agrees not to, directly or indirectly, participate in the unauthorized use, disclosure or conversion of any confidential information.</span><span class="dl">"</span><span class="p">,</span>      
          <span class="dl">"</span><span class="s2">geographicalArea</span><span class="dl">"</span><span class="p">:</span> <span class="p">[</span> 
@@ -1199,91 +1199,91 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>scope</td>
 <td>element</td>
 <td>-</td>
-<td>Extent, range, coverage, area or space of the license</td>
+<td>Extent, range, coverage, area or space of the license.</td>
 </tr>
 <tr>
 <td>definition</td>
 <td>string</td>
 <td>text content, max length 512 chars</td>
-<td>Background and purpose of the license</td>
+<td>Background and purpose of the license.</td>
 </tr>
 <tr>
 <td>language</td>
 <td>string</td>
 <td>ISO 639-1 standard language codes</td>
-<td>License language</td>
+<td>License language.</td>
 </tr>
 <tr>
 <td>permanent</td>
 <td>boolean</td>
 <td>true/false</td>
-<td>License with no expiration date</td>
+<td>License with no expiration date.</td>
 </tr>
 <tr>
 <td>termitationConditions</td>
 <td>string</td>
 <td>text content, max length 512 chars</td>
-<td>Cancellation conditions of the license</td>
+<td>Cancellation conditions of the license.</td>
 </tr>
 <tr>
 <td>continuityConditions</td>
 <td>string</td>
 <td>text content, max length 512 chars</td>
-<td>Continuity conditions of the license</td>
+<td>Continuity conditions of the license.</td>
 </tr>
 <tr>
 <td>restrictions</td>
 <td>string</td>
 <td>text content, max length 512 chars</td>
-<td>Restrictions of the license</td>
+<td>Restrictions of the license.</td>
 </tr>
 <tr>
 <td>geographicalArea</td>
 <td>string</td>
 <td>ISO 3166-1 alpha-2 codes</td>
-<td>License right restricted to the geographical area</td>
+<td>License right restricted to the geographical area.</td>
 </tr>
 <tr>
 <td>modificationRights</td>
 <td>boolean</td>
 <td>true/false</td>
-<td>Data modification rights</td>
+<td>Data modification rights.</td>
 </tr>
 <tr>
 <td>resellingRights</td>
 <td>boolean</td>
 <td>true/false</td>
-<td>Reselling rights</td>
+<td>Reselling rights.</td>
 </tr>
 <tr>
 <td>governance</td>
 <td>element</td>
 <td>-</td>
-<td>Governance is the approach taken to ensure that the agreed outcomes are being fulfilled</td>
+<td>Governance is the approach taken to ensure that the agreed outcomes are being fulfilled.</td>
 </tr>
 <tr>
 <td>containsPersonalData</td>
 <td>boolean</td>
 <td>true/false</td>
-<td>Data contains personal data</td>
+<td>Data contains personal data.</td>
 </tr>
 <tr>
 <td>dpaURL</td>
 <td>URL</td>
 <td>valid URL</td>
-<td>The URL of the Data Processing Agreement (DPA)</td>
+<td>The URL of the Data Processing Agreement (DPA).</td>
 </tr>
 <tr>
 <td>audit</td>
 <td>string</td>
 <td>text content, max length 512 chars</td>
-<td>License auditing terms</td>
+<td>License auditing terms.</td>
 </tr>
 <tr>
 <td>warranties</td>
 <td>string</td>
 <td>text content, max length 512 chars</td>
-<td>License warranties</td>
+<td>License warranties.</td>
 </tr>
 <tr>
 <td>forceMajeure</td>
@@ -1295,19 +1295,19 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>damages</td>
 <td>string</td>
 <td>text content, max length 512 chars</td>
-<td>Damages refers to the sum of money (i.e. indemnifications) for a breach of some duty or violation of license right</td>
+<td>Damages refers to the sum of money (i.e. indemnifications) for a breach of some duty or violation of license right.</td>
 </tr>
 <tr>
 <td>confidentiality</td>
 <td>string</td>
 <td>text content, max length 512 chars</td>
-<td>Restrictions and requirements imposed on the Data User regarding e.g. the use and disclosure of the Data Holder&#39;s confidential information</td>
+<td>Restrictions and requirements imposed on the Data User regarding e.g. the use and disclosure of the Data Holder&#39;s confidential information.</td>
 </tr>
 <tr>
 <td>applicableLaws</td>
 <td>string</td>
 <td>text content, max length 512 chars</td>
-<td>Applicable laws, i.e local acts, degrees or law</td>
+<td>Applicable laws, i.e local acts, degrees or law.</td>
 </tr>
 </tbody></table>
 <h1 id='data-holder'>Data Holder</h1>
