--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Open Data Product Specification 1.0" />
     <meta property="og:url" content="https://data-product-business.github.io/open-data-product-spec/" />
     <meta property=”og:type” content=”website” />
-    <meta property="og:image" content="https://data-product-business.github.io/open-data-product-spec/images/logo-dps-ebd5a97d.png" />
+    <meta property="og:image" content="https://opendataproducts.org/images/logo-dps-new-4bb33ca5.png" />
     <meta property="og:description" 
     content="The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products." />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
