deploy: 9253e9273bdb49627d2c9245335293aa7d5b975a

--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>storageType</td>
 <td>string</td>
 <td>any</td>
-<td>Describes the internal storage type, such as files, sql, events, MQTT.</td>
+<td>Describes the internal storage type, such as files, sql, events, MQTT, etc.</td>
 </tr>
 <tr>
 <td>containerTool</td>
