--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>storageType</td>
 <td>string</td>
 <td>any</td>
-<td>Describes the internal storage type, such as files, sql, events, MQTT, etc.</td>
+<td>Describes the internal storage type, such as files, sql, events, MQTT.</td>
 </tr>
 <tr>
 <td>containerTool</td>
@@ -1594,6 +1594,9 @@ The JSON examples are not based on any real data product, but exemplify the usag
   <span class="p">],</span>
 <span class="dl">"</span><span class="s2">dataPipeline</span><span class="dl">"</span><span class="p">:</span> <span class="p">{</span>
   <span class="dl">"</span><span class="s2">infrastructure</span><span class="dl">"</span><span class="p">:</span> <span class="p">{</span>
+    <span class="dl">"</span><span class="s2">platform</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">AWS</span><span class="dl">"</span><span class="p">,</span>
+    <span class="dl">"</span><span class="s2">technology</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">Amazon S3</span><span class="dl">"</span><span class="p">,</span>
+    <span class="dl">"</span><span class="s2">storageType</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">files</span><span class="dl">"</span><span class="p">,</span>
     <span class="dl">"</span><span class="s2">containerTool</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">helm</span><span class="dl">"</span><span class="p">,</span>
     <span class="dl">"</span><span class="s2">format</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">yaml</span><span class="dl">"</span><span class="p">,</span>
     <span class="dl">"</span><span class="s2">status</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">development</span><span class="dl">"</span><span class="p">,</span>
