deploy: d92828e5ea52f3032d73dda085245931008e83ab

--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <span class="dl">"</span><span class="s2">dataPipeline</span><span class="dl">"</span><span class="p">:</span> <span class="p">{</span>
   <span class="dl">"</span><span class="s2">infrastructure</span><span class="dl">"</span><span class="p">:</span> <span class="p">{</span>
     <span class="dl">"</span><span class="s2">platform</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">AWS</span><span class="dl">"</span><span class="p">,</span>
-    <span class="dl">"</span><span class="s2">technology</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">Amazon S3</span><span class="dl">"</span><span class="p">,</span>
+    <span class="dl">"</span><span class="s2">storageTechnology</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">Amazon S3</span><span class="dl">"</span><span class="p">,</span>
     <span class="dl">"</span><span class="s2">storageType</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">files</span><span class="dl">"</span><span class="p">,</span>
     <span class="dl">"</span><span class="s2">containerTool</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">helm</span><span class="dl">"</span><span class="p">,</span>
     <span class="dl">"</span><span class="s2">format</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">yaml</span><span class="dl">"</span><span class="p">,</span>
@@ -866,7 +866,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>Platform infrastructure, such as AWS, GCP, Azure.</td>
 </tr>
 <tr>
-<td>technology</td>
+<td>storageTechnology</td>
 <td>string</td>
 <td>any</td>
 <td>Describes the internal storage area technology, such as Amazon S3, Google Cloud Storage, Azure Blob Storage.</td>
