deploy: 90fc79f74e23827b9a59ace1d3cb4c868b89115a

--- a/index.html
+++ b/index.html
@@ -849,10 +849,10 @@ The JSON examples are not based on any real data product, but exemplify the usag
 </tr>
 </thead><tbody>
 <tr>
-<td>dataOps</td>
+<td>infrastructure</td>
 <td>element</td>
 <td>-</td>
-<td>DataOps is a process whereby a data product pipeline deployment method is defined.</td>
+<td>Infrastructure is a process whereby a data product pipeline deployment method is defined.</td>
 </tr>
 <tr>
 <td>platform</td>
