deploy: b89de03c323da940cf46c792338a759b89e7349b

--- a/index.html
+++ b/index.html
@@ -1532,7 +1532,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <h1 id='specification-extensions'>Specification extensions</h1>
 <p>While the Open Data Product Specification tries to accommodate most use cases, additional data can be added to extend the specification at certain points.</p>
 
-<p>The extensions properties are implemented as patterned fields that are always prefixed by &quot;x-&quot;. The extensions may or may not be supported by the available tooling, but those may be extended as well to add requested support (if tools are internal or open-sourced).</p>
+<p>The extensions properties are implemented as patterned fields that are always prefixed by &quot;x-&quot;. The extensions may or may not be supported by the available tooling, but those may be extended as well to add requested support (if tools are internal or open-sourced). Open Data Product Initiative Technical Steering Committee does not officially approve external extensions - they are fully independent. Popular extensions however are natural candidates for future additions of the standard. </p>
 
 <blockquote>
 <p>Example of extension usage:</p>
