--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>storageTechnology</td>
 <td>string</td>
 <td>any</td>
-<td>Describes the internal storage area technology, such as Amazon S3, Google Cloud Storage, Azure Blob Storage.</td>
+<td>Describes the internal storage area technology, such as Amazon S3, Google Cloud Storage, Azure Blob Storage, Azure SQL.</td>
 </tr>
 <tr>
 <td>storageType</td>
