--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>status</td>
 <td>string</td>
 <td>Options: announcement, draft, development, testing, acceptance, production, sunset, retired.</td>
-<td></td>
+<td>Development status.</td>
 </tr>
 <tr>
 <td>scriptURL</td>
