--- a/index.html
+++ b/index.html
@@ -925,6 +925,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
  <span class="dl">"</span><span class="s2">dataAccess</span><span class="dl">"</span><span class="p">:</span> <span class="p">{</span>
   <span class="dl">"</span><span class="s2">interface</span><span class="dl">"</span> <span class="p">{</span>
     <span class="dl">"</span><span class="s2">outputPorttype</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">API</span><span class="dl">"</span><span class="p">,</span>
+    <span class="dl">"</span><span class="s2">authenticationMethod</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">OAuth</span><span class="dl">"</span><span class="p">,</span>
     <span class="dl">"</span><span class="s2">specification</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">OAS</span><span class="dl">"</span><span class="p">,</span>
     <span class="dl">"</span><span class="s2">format</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">JSON</span><span class="dl">"</span><span class="p">,</span>
     <span class="dl">"</span><span class="s2">specURL</span><span class="dl">"</span><span class="p">:</span> <span class="dl">"</span><span class="s2">https://192.168.10.1/petstore.json</span><span class="dl">"</span><span class="p">,</span>
@@ -954,6 +955,12 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <td>Type of data access.</td>
 </tr>
 <tr>
+<td>authenticationMethod</td>
+<td>string</td>
+<td>One of: API key, HTTP Basic, OAuth, No authentication</td>
+<td>Data access authentication method type.</td>
+</tr>
+<tr>
 <td>specification</td>
 <td>string</td>
 <td>any</td>
@@ -962,7 +969,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <tr>
 <td>format</td>
 <td>string</td>
-<td>any</td>
+<td>One of: JSON, XML, plain text</td>
 <td>File format.</td>
 </tr>
 <tr>
