--- a/index.html
+++ b/index.html
@@ -951,20 +951,20 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <tr>
 <td>outputPorttype</td>
 <td>string</td>
-<td>One of: API, SQL, sFTP, gRPC</td>
-<td>Type of data access.</td>
+<td>any</td>
+<td>Type of data access, such as API, SQL, sFTP, gRPC.</td>
 </tr>
 <tr>
 <td>authenticationMethod</td>
 <td>string</td>
-<td>ant</td>
+<td>any</td>
 <td>Data access authentication method type, such as API key, HTTP Basic, OAuth, No authentication.</td>
 </tr>
 <tr>
 <td>specification</td>
 <td>string</td>
 <td>any</td>
-<td>Type of the data access specification.</td>
+<td>Type of the data access specification, such as OAS, RAML, Slate.</td>
 </tr>
 <tr>
 <td>format</td>
