--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@ The JSON examples are not based on any real data product, but exemplify the usag
 <h1 id='data-pipeline'>Data Pipeline</h1>
 <p>Data Pipeline is a process whereby a data product pipeline deployment method is defined. Usually the deployment script contains the logic of the individual steps as well as the code chaining the steps together.</p>
 
-<p>Data Pipeline <strong>OBJECT</strong> defines building, deploying, and running the data product’s code, and storing and giving access to data and metadata. This priciple has been adopted from the <a href="https://towardsdatascience.com/what-is-a-data-mesh-and-how-not-to-mesh-it-up-210710bb41e0">Data Mesh</a>.</p>
+<p>Data Pipeline <strong>OBJECT</strong> defines building, deploying, and running data product’s code, and storing and giving access to data and metadata. This priciple has been adopted from the <a href="https://towardsdatascience.com/what-is-a-data-mesh-and-how-not-to-mesh-it-up-210710bb41e0">Data Mesh</a>.</p>
 
 <blockquote>
 <p>Example of Data Pipeline component usage:</p>
