deploy: 9adf675b338721f50aadb40512759809a58903fc

--- a/index.html
+++ b/index.html
@@ -431,6 +431,10 @@
 <li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec">https://github.com/Open-Data-Product-Initiative/open-data-product-spec</a></li>
 </ul>
 
+<p><strong>Development version:</strong></p>
+
+<p>The next version of the specification is in development. You can view the coming spec from here <a href="https://open-data-product-initiative.github.io/open-data-product-spec-1.1dev/">https://open-data-product-initiative.github.io/open-data-product-spec-1.1dev/</a></p>
+
 <p><strong>Editors:</strong></p>
 
 <ul>
