deploy: 2241d2ecde4660690b15be6921289e563f081da2

--- a/index.html
+++ b/index.html
@@ -425,15 +425,15 @@
 
 <p><strong>Published 4th Feb 2022</strong></p>
 
-<p><strong>Latest version source:</strong></p>
+<p><strong>Source:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec">https://github.com/Open-Data-Product-Initiative/open-data-product-spec</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-1.0">https://github.com/Open-Data-Product-Initiative/open-data-product-spec-1.0</a></li>
 </ul>
 
 <p><strong>Development version:</strong></p>
 
-<p>The next version of the specification is in development. You can view the coming spec from here <a href="https://open-data-product-initiative.github.io/open-data-product-spec-1.1dev/">https://open-data-product-initiative.github.io/open-data-product-spec-1.1dev/</a></p>
+<p>The next version of the specification is in development. You can view the coming spec from here <a href="https://open-data-product-initiative.github.io/open-data-product-spec-2.0/">https://open-data-product-initiative.github.io/open-data-product-spec-2.0/</a></p>
 
 <p><strong>Editors:</strong></p>
 
@@ -445,11 +445,11 @@
 <p><strong>Participate:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Data-Product-Business/open-data-product-spec/issues/new/">Raise an issue in Github</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-1.0/issues">Raise an issue in Github</a></li>
 <li><a href="https://v90nkeo0oq0.typeform.com/to/Q1Zo6wE5">Raise an issue in service designed for average mortals</a> </li>
 </ul>
 <h2 id='introduction'>Introduction</h2>
-<p>The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products. The work is based on existing standards (schema.org), best practices and emerging concepts like Data Mesh. The reasoning is that we reuse and proudly copy instead of reinventing the wheel. More detailed information of the origin can be found from the <a href="https://www.dataproductbusiness.com/open-data-product-specification">Open Data Product Specification homepage</a>. </p>
+<p>The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products. The work is based on existing standards (schema.org), best practices and emerging concepts like Data Mesh. The reasoning is that we reuse and proudly copy instead of reinventing the wheel. More detailed information of the origin can be found from the <a href="https://opendataproducts.org">Open Data Product Specification homepage</a>. </p>
 
 <p>The specification has been designed with four major aspects of the data product in mind: 1) technical (infrastructure &amp; access), 2) business (pricing &amp; plans), 3) legal (licensing &amp; IPR), and 4) ethical (privacy &amp; mydata). The four aspects are described in 5 elements, which contain attributes and other elements. </p>
 
