--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
 
 <p><strong>Published 4th Feb 2022</strong></p>
 
-<p><strong>Source:</strong></p>
+<p><strong>Latest development version source:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-1.0">https://github.com/Open-Data-Product-Initiative/open-data-product-spec-1.0</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-dev">https://github.com/Open-Data-Product-Initiative/open-data-product-spec-dev</a></li>
 </ul>
 
 <p><strong>Development version:</strong></p>
