deploy: cc791c998fee92cf227a43f8748e38c40ab889e2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             name="description"
             content="The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products."
         >
-    <title>Open Data Product Specification | Enabling Data Economy | Data Product Business</title>
+    <title>Open Data Product Specification 1.0 | Enabling Data Economy | Open Data Product Initiative</title>
 
     <style media="screen">
       .highlight table td { padding: 5px; }
@@ -410,9 +410,8 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='https://www.dataproductbusiness.com/'>Data Product Business</a></li>
             <li>License <a href='https://creativecommons.org/licenses/by-sa/4.0/'>CC BY-SA 4.0</a></li>
-            <li><br/><a href='https://www.dataproductbusiness.com/open-data-product-specification'>Specification home</a></li>
+            <li><br/><a href='https://opendataproducts.org'>Specification home</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
@@ -425,10 +424,10 @@
 
 <p><strong>Published 4th Feb 2022</strong></p>
 
-<p><strong>Latest development version source:</strong></p>
+<p><strong>Source:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-dev">https://github.com/Open-Data-Product-Initiative/open-data-product-spec-dev</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-1.0">https://github.com/Open-Data-Product-Initiative/open-data-product-spec-1.0</a></li>
 </ul>
 
 <p><strong>Development version:</strong></p>
