--- a/index.html
+++ b/index.html
@@ -424,15 +424,15 @@
 
 <p><strong>Published 4th Feb 2022</strong></p>
 
-<p><strong>Source:</strong></p>
+<p><strong>Latest production version is 2.0:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-1.0">https://github.com/Open-Data-Product-Initiative/open-data-product-spec-1.0</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-2.0">https://github.com/Open-Data-Product-Initiative/open-data-product-spec-2.0</a></li>
 </ul>
 
 <p><strong>Development version:</strong></p>
 
-<p>The next version of the specification is in development. You can view the coming spec from here <a href="https://open-data-product-initiative.github.io/open-data-product-spec-2.0/">https://open-data-product-initiative.github.io/open-data-product-spec-2.0/</a></p>
+<p>The next version of the specification is in development. You can view the coming spec from here <a href="https://open-data-product-initiative.github.io/open-data-product-spec-dev">https://open-data-product-initiative.github.io/open-data-product-spec-dev/</a></p>
 
 <p><strong>Editors:</strong></p>
 
