--- a/index.html
+++ b/index.html
@@ -424,11 +424,10 @@
 
 <p><strong>Published 4th Feb 2022</strong></p>
 
-<p><strong>Latest production version is 2.0:</strong></p>
-
-<ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-2.0">https://github.com/Open-Data-Product-Initiative/open-data-product-spec-2.0</a></li>
-</ul>
+<p><strong>Latest production version is 2.0:</strong>
+<div style="box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;">
+* <a href="https://github.com/Open-Data-Product-Initiative/open-data-product-spec-2.0">https://github.com/Open-Data-Product-Initiative/open-data-product-spec-2.0</a>
+</div></p>
 
 <p><strong>Development version:</strong></p>
 
