--- a/index.html
+++ b/index.html
@@ -334,6 +334,9 @@
             <a href="#open-data-product-specification-1-0" class="toc-h1 toc-link" data-title="OPEN DATA PRODUCT SPECIFICATION 1.0">OPEN DATA PRODUCT SPECIFICATION 1.0</a>
               <ul class="toc-list-h2">
                   <li>
+                    <a href="#" class="toc-h2 toc-link" data-title="Note! You are looking at the old version. Latest production version is 2.0:">Note! You are looking at the old version. Latest production version is 2.0:</a>
+                  </li>
+                  <li>
                     <a href="#version-1-0" class="toc-h2 toc-link" data-title="Version 1.0">Version 1.0</a>
                   </li>
                   <li>
@@ -417,17 +420,17 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='open-data-product-specification-1-0'>OPEN DATA PRODUCT SPECIFICATION 1.0</h1><h2 id='version-1-0'>Version 1.0</h2>
+        <h1 id='open-data-product-specification-1-0'>OPEN DATA PRODUCT SPECIFICATION 1.0</h1>
+<div style="width:500px; box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;margin:20px;padding:40px;">
+<h3>Note! You are looking at the old version. Latest production version is 2.0:</h3>
+<a href="https://open-data-product-initiative.github.io/open-data-product-spec-2.0/">https://open-data-product-initiative.github.io/open-data-product-spec-2.0/</a>
+</div>
+<h2 id='version-1-0'>Version 1.0</h2>
 <p>The key words “MUST”, “MUST NOT”, “REQUIRED”, “SHALL”, “SHALL NOT”, “SHOULD”, “SHOULD NOT”, “RECOMMENDED”, “NOT RECOMMENDED”, “MAY”, and “OPTIONAL” in this document are to be interpreted as described in BCP 14 [RFC2119] [RFC8174] when, and only when, they appear in all capitals, as shown here.</p>
 
 <p>The specification is shared under <a href='https://creativecommons.org/licenses/by-sa/4.0/'>Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)</a> license. </p>
 
 <p><strong>Published 4th Feb 2022</strong></p>
-
-<div style="width:500px; box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;margin:20px;padding:40px;">
-<h3>Latest production version is 2.0:</h3>
-<a href="https://open-data-product-initiative.github.io/open-data-product-spec-2.0/">https://open-data-product-initiative.github.io/open-data-product-spec-2.0/</a>
-</div>
 
 <p><strong>Editors:</strong></p>
 
